Fix an issue with the reel layout on small viewports

--- a/puppetplays-web/components/Author/authorNote.module.scss
+++ b/puppetplays-web/components/Author/authorNote.module.scss
@@ -8,6 +8,7 @@
 .biographicalNote {
   margin: 30px auto 100px;
   max-width: 70ch;
+  font-size: 16px;
 }
 
 .works {
