--- a/puppetplays-web/components/reel.module.scss
+++ b/puppetplays-web/components/reel.module.scss
@@ -2,11 +2,15 @@
   position: relative;
 
   &.isBleeding {
-    display: flex;
-    justify-content: center;
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
-    max-width: 100vw;
+    max-width: calc(100vw - 40px);
+
+    @media (min-width: 678px) {
+      display: flex;
+      justify-content: center;
+      margin-left: calc(-50vw + 50%);
+      margin-right: calc(-50vw + 50%);
+      max-width: 100vw;
+    }
   }
 }
 
